--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ torch>=2.0.0
 sentence-transformers>=2.2.0
 faiss-cpu>=1.7.0
 numpy>=1.21.0
+python-dotenv>=1.0.0
+beautifulsoup4>=4.9.0
+requests>=2.25.0
+scikit-learn>=1.0.0
+pandas>=1.0.0
+datasets>=2.10.0
