--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,132 @@
-# Byte-compiled / optimized / DLL files
+# Virtual Environment
+venv/
+env/
+.env
+.venv
+
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# Virtual environment
-venv/
-ENV/
-env/
-.venv/
-venv/
+# PyTorch
+*.pth
+*.pt
 
-# Jupyter Notebook checkpoints
+# Jupyter Notebook
 .ipynb_checkpoints
 
-# VSCode settings
-.vscode/
+# IPython
+profile_default/
+ipython_config.py
 
-# System files
+# pyenv
+.python-version
+
+# pipenv
+Pipfile.lock
+
+# PEP 582
+__pypackages__/
+
+# Celery
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# macOS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# Logs and runtime files
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Linux
+*~
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
 *.log
+logs/
 
-# Cache files
-*.cache
-*.egg-info/
-dist/
-build/
+# Large model files (if you have any)
+*.bin
+*.h5
+*.onnx
+models/
+checkpoints/
 
-# PyInstaller
-*.spec
+# Data files (if you have large datasets)
+data/
+datasets/
+*.csv
+*.json
+*.parquet
+*.pkl
+*.pickle
 
-# Environment variables
-.env
-*.env
-
-# Hugging Face cache
-~/.cache/huggingface
+# Temporary files
+*.tmp
+*.temp
+temp/
+tmp/
