--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,90 @@
-gradio>=4.0.0
-transformers>=4.30.0
-torch>=2.0.0
-sentence-transformers>=2.2.0
-faiss-cpu>=1.7.0
-numpy>=1.21.0
-python-dotenv>=1.0.0
-beautifulsoup4>=4.9.0
-requests>=2.25.0
-scikit-learn>=1.0.0
-pandas>=1.0.0
-datasets>=2.10.0
-huggingface_hub>=0.16.0
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+audioop-lts==0.2.1
+beautifulsoup4==4.13.4
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
+datasets==3.6.0
+dill==0.3.8
+faiss-cpu==1.11.0
+fastapi==0.115.13
+ffmpy==0.6.0
+filelock==3.18.0
+frozenlist==1.7.0
+fsspec==2025.3.0
+gradio==5.34.2
+gradio_client==1.10.3
+groovy==0.1.2
+h11==0.16.0
+hf-xet==1.1.5
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.33.0
+idna==3.10
+inquirerpy==0.3.4
+Jinja2==3.1.6
+joblib==1.5.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.5.0
+multiprocess==0.70.16
+networkx==3.5
+numpy==2.3.1
+orjson==3.10.18
+packaging==25.0
+pandas==2.3.0
+pfzy==0.3.4
+pillow==11.2.1
+prompt_toolkit==3.0.51
+propcache==0.3.2
+pyarrow==20.0.0
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydub==0.25.1
+Pygments==2.19.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+rich==14.0.0
+ruff==0.12.0
+safehttpx==0.1.6
+safetensors==0.5.3
+scikit-learn==1.7.0
+scipy==1.16.0
+semantic-version==2.10.0
+sentence-transformers==4.1.0
+setuptools==80.9.0
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+starlette==0.46.2
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+tomlkit==0.13.3
+torch==2.7.1
+tqdm==4.67.1
+transformers==4.52.4
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.34.3
+wcwidth==0.2.13
+websockets==15.0.1
+xxhash==3.5.0
+yarl==1.20.1
